# monadGuard

./: .gitignore  README.md  package.json
agent/: CMakeLists.txt  Poc.cpp  api_client.cpp  api_client.h  bridge.py  elf_parser.cpp  elf_parser.h  heuristics.cpp  heuristics.h  main.cpp  pe_parser.cpp  pe_parser.h  utils.cpp  utils.h
